--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,3 +58,18 @@ body {
     @apply h-full
   }
 }
+
+
+
+
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
